--- a/project.ipynb
+++ b/project.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,134 +169,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>0.490</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>0.99660</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>0.64</td>\n",
+       "      <th>210</th>\n",
+       "      <td>9.7</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.039</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.99585</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>0.86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>8.2</td>\n",
-       "      <td>0.500</td>\n",
+       "      <th>203</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.42</td>\n",
        "      <td>0.35</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>0.077</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>0.99760</td>\n",
-       "      <td>3.23</td>\n",
-       "      <td>0.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>877</th>\n",
-       "      <td>7.7</td>\n",
-       "      <td>0.715</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>0.064</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>0.99371</td>\n",
-       "      <td>3.41</td>\n",
-       "      <td>0.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1151</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>0.580</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>0.044</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.088</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>0.99352</td>\n",
-       "      <td>3.46</td>\n",
-       "      <td>0.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>237</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>0.645</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0.097</td>\n",
-       "      <td>15.0</td>\n",
        "      <td>39.0</td>\n",
-       "      <td>0.99675</td>\n",
-       "      <td>3.37</td>\n",
-       "      <td>0.58</td>\n",
+       "      <td>0.99610</td>\n",
+       "      <td>3.34</td>\n",
+       "      <td>0.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>0.610</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.057</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.99525</td>\n",
-       "      <td>3.42</td>\n",
-       "      <td>0.60</td>\n",
+       "      <th>1060</th>\n",
+       "      <td>11.6</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.074</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.99810</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>0.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>308</th>\n",
-       "      <td>10.3</td>\n",
-       "      <td>0.430</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>0.214</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>0.99940</td>\n",
-       "      <td>3.19</td>\n",
-       "      <td>0.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1074</th>\n",
-       "      <td>7.5</td>\n",
-       "      <td>0.770</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>8.1</td>\n",
-       "      <td>0.098</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>0.99892</td>\n",
-       "      <td>3.20</td>\n",
-       "      <td>0.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1581</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>0.560</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>0.053</td>\n",
+       "      <th>195</th>\n",
+       "      <td>7.8</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.074</td>\n",
        "      <td>24.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>0.99402</td>\n",
-       "      <td>3.54</td>\n",
-       "      <td>0.60</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>0.99680</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1476</th>\n",
-       "      <td>9.9</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>0.205</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>1.00242</td>\n",
+       "      <th>416</th>\n",
+       "      <td>10.6</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.111</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.99700</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1132</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>0.99330</td>\n",
+       "      <td>3.38</td>\n",
+       "      <td>0.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>769</th>\n",
+       "      <td>7.9</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.076</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.99668</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>0.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.075</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.99800</td>\n",
        "      <td>3.16</td>\n",
-       "      <td>0.75</td>\n",
+       "      <td>0.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>8.1</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>1.00025</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>0.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1267</th>\n",
+       "      <td>10.4</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.068</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.99600</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>0.87</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -304,31 +304,31 @@
       ],
       "text/plain": [
        "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-       "87              7.7             0.490         0.26             1.9      0.062   \n",
-       "190             8.2             0.500         0.35             2.9      0.077   \n",
-       "877             7.7             0.715         0.01             2.1      0.064   \n",
-       "1151            6.1             0.580         0.23             2.5      0.044   \n",
-       "237             7.2             0.645         0.00             1.9      0.097   \n",
-       "222             6.8             0.610         0.04             1.5      0.057   \n",
-       "308            10.3             0.430         0.44             2.4      0.214   \n",
-       "1074            7.5             0.770         0.20             8.1      0.098   \n",
-       "1581            6.2             0.560         0.09             1.7      0.053   \n",
-       "1476            9.9             0.500         0.50            13.8      0.205   \n",
+       "210             9.7              0.53         0.60             2.0      0.039   \n",
+       "203             7.0              0.42         0.35             1.6      0.088   \n",
+       "1060           11.6              0.23         0.57             1.8      0.074   \n",
+       "195             7.8              0.59         0.33             2.0      0.074   \n",
+       "416            10.6              0.48         0.64             2.2      0.111   \n",
+       "1132            7.4              0.36         0.34             1.8      0.075   \n",
+       "769             7.9              0.72         0.01             1.9      0.076   \n",
+       "3              11.2              0.28         0.56             1.9      0.075   \n",
+       "266             8.1              0.87         0.00             3.3      0.096   \n",
+       "1267           10.4              0.43         0.50             2.3      0.068   \n",
        "\n",
        "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \n",
-       "87                    9.0                  31.0  0.99660  3.39       0.64  \n",
-       "190                  21.0                 127.0  0.99760  3.23       0.62  \n",
-       "877                  31.0                  43.0  0.99371  3.41       0.57  \n",
-       "1151                 16.0                  70.0  0.99352  3.46       0.65  \n",
-       "237                  15.0                  39.0  0.99675  3.37       0.58  \n",
-       "222                   5.0                  10.0  0.99525  3.42       0.60  \n",
-       "308                   5.0                  12.0  0.99940  3.19       0.63  \n",
-       "1074                 30.0                  92.0  0.99892  3.20       0.58  \n",
-       "1581                 24.0                  32.0  0.99402  3.54       0.60  \n",
-       "1476                 48.0                  82.0  1.00242  3.16       0.75  "
+       "210                   5.0                  19.0  0.99585  3.30       0.86  \n",
+       "203                  16.0                  39.0  0.99610  3.34       0.55  \n",
+       "1060                  3.0                   8.0  0.99810  3.14       0.70  \n",
+       "195                  24.0                 120.0  0.99680  3.25       0.54  \n",
+       "416                   6.0                  20.0  0.99700  3.26       0.66  \n",
+       "1132                 18.0                  38.0  0.99330  3.38       0.88  \n",
+       "769                   7.0                  32.0  0.99668  3.39       0.54  \n",
+       "3                    17.0                  60.0  0.99800  3.16       0.58  \n",
+       "266                  26.0                  61.0  1.00025  3.60       0.72  \n",
+       "1267                 13.0                  19.0  0.99600  3.10       0.87  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9787/4008391965.py:52: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
+      "/tmp/ipykernel_2695/4008391965.py:52: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -612,14 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9787/2028834980.py:10: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
+      "/tmp/ipykernel_2695/2028834980.py:10: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,8 +753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "\n"
+    " \n"
    ]
   },
   {
@@ -775,11 +774,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## 📉 L2 Loss Comparison: Whole Data vs. 5-Fold Cross-Validation\n",
+      "\n",
+      "                         Model Whole Data L2 Loss CV L2 Loss (5-Fold) Difference         Observation\n",
+      "       Linear Regression (OLS)             0.0101              0.0236     0.0135 Overfitting Present\n",
+      " Ridge Regression (Alpha=10.0)             0.0101              0.0258     0.0157 Overfitting Present\n",
+      "Support Vector Regressor (RBF)             0.0118              0.0358     0.0240 Overfitting Present\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression, Ridge\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# --- 1. Data Setup (Reusing code from Problem 6) ---\n",
+    "\n",
+    "# Load the dataset (assuming successful load)\n",
+    "wine_quality = pd.read_csv(\n",
+    "    'https://github.com/epistasislab/pmlb/raw/refs/heads/master/datasets/wine_quality_red/wine_quality_red.tsv.gz', \n",
+    "    sep='\\t'\n",
+    ").dropna()\n",
+    "\n",
+    "# Select the first 10 columns (indices 0 through 9)\n",
+    "wine_quality_10_cols = wine_quality.iloc[:, :10]\n",
+    "\n",
+    "# Define features (X) and target (y)\n",
+    "X = wine_quality_10_cols.iloc[:, :9]  \n",
+    "y = wine_quality_10_cols.iloc[:, 9] \n",
+    "\n",
+    "# --- 2. Define Models and Cross-Validation Parameters ---\n",
+    "\n",
+    "# Note: The models are the same as in Problem 6\n",
+    "models = [\n",
+    "    ('Linear Regression (OLS)', LinearRegression()),\n",
+    "    ('Ridge Regression (Alpha=10.0)', Ridge(alpha=10.0)),\n",
+    "    ('Support Vector Regressor (RBF)', SVR(kernel='rbf', C=10.0, gamma='auto'))\n",
+    "]\n",
+    "\n",
+    "# Scoring parameter for L2 Loss (Mean Squared Error). \n",
+    "# scikit-learn uses negative MSE for cross_val_score \n",
+    "# because it requires a scoring function where higher values are better.\n",
+    "scoring_metric = 'neg_mean_squared_error'\n",
+    "cv_folds = 5\n",
+    "\n",
+    "# --- 3. Run Cross-Validation and Calculate Mean L2 Loss ---\n",
+    "\n",
+    "cv_results = []\n",
+    "\n",
+    "for name, model in models:\n",
+    "    # Perform 5-fold cross-validation\n",
+    "    scores = cross_val_score(model, X, y, cv=cv_folds, scoring=scoring_metric)\n",
+    "    \n",
+    "    # Calculate the mean L2 Loss (MSE) from the cross-validation scores\n",
+    "    # We take the negative of the scores because they were calculated as negative MSE\n",
+    "    mean_cv_l2_loss = -scores.mean()\n",
+    "    \n",
+    "    cv_results.append({\n",
+    "        'Model': name,\n",
+    "        'CV L2 Loss (MSE)': mean_cv_l2_loss\n",
+    "    })\n",
+    "\n",
+    "# --- 4. Display Results and Comparison ---\n",
+    "\n",
+    "# Data from Problem 6 (L2 Losses trained/tested on the WHOLE dataset)\n",
+    "whole_data_l2_losses = {\n",
+    "    'Linear Regression (OLS)': 0.0101, \n",
+    "    'Ridge Regression (Alpha=10.0)': 0.0101,\n",
+    "    'Support Vector Regressor (RBF)': 0.0118\n",
+    "}\n",
+    "\n",
+    "comparison_data = []\n",
+    "for result in cv_results:\n",
+    "    model_name = result['Model']\n",
+    "    cv_loss = result['CV L2 Loss (MSE)']\n",
+    "    whole_loss = whole_data_l2_losses[model_name]\n",
+    "    \n",
+    "    # Calculate the difference and determine the conclusion\n",
+    "    difference = cv_loss - whole_loss\n",
+    "    conclusion = \"Overfitting Present\" if difference > 0.0001 else \"Low Overfitting / Robust\"\n",
+    "\n",
+    "    comparison_data.append({\n",
+    "        'Model': model_name,\n",
+    "        'Whole Data L2 Loss': f\"{whole_loss:.4f}\",\n",
+    "        'CV L2 Loss (5-Fold)': f\"{cv_loss:.4f}\",\n",
+    "        'Difference': f\"{difference:.4f}\",\n",
+    "        'Observation': conclusion\n",
+    "    })\n",
+    "\n",
+    "comparison_df = pd.DataFrame(comparison_data)\n",
+    "\n",
+    "print(\"## 📉 L2 Loss Comparison: Whole Data vs. 5-Fold Cross-Validation\\n\")\n",
+    "print(comparison_df.to_string(index=False))"
    ]
   },
   {
